2009-09-09  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner.csproj:
	* Mono.Tuner.dll.sources: Add new step MoonlightA11yApiMarker.

	* Mono.Tuner/MoonlightA11yApiMarker.cs:
	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Use a new
	  marker step to only mark API used, not mark recursively.

	* Mono.Tuner/MoonlightA11yUsageInspectionStep.cs: Use the new
	  marker step.

	* Makefile: Adding reference to System, as we need it for
	  System.Text.RegularExpressions.

2009-08-13  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yProcessor.cs: Don't whitelist SC
	  attribs for base methods that are on our assembly.
	This finally makes a11y work without security disabled. The
	  summary of the troubles encountered:
	- GetHashCode() -> base method not SC. (r139589+r139649)
	- Dispose() -> interface method not SC. (r139796)
	- get_Handle() -> interface method SC while impl not SC. (this
	  commit)

2009-08-12  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yProcessor.cs: Look for base methods
	  in interfaces as well.

2009-08-11  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Yet another
	  blacklisted element (SW.dll is not linked).

2009-08-11  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Blacklist
	  more stuff.

2009-08-11  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Blacklist
	  our bridge.

2009-08-10  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yProcessor.cs: Move FIXME to a better
	  place. Fix NRE.

2009-08-07  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yProcessor.cs: Don't use var.
	Remove debug spew.

2009-08-07  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/InjectSecurityAttributes.cs: Make an enum
	  and a method protected.
